# hw_2_7

./: README.md  config.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1f014cd5736a_init.py  790a6dbadf64_init.py  f6d3df04354a_init.py
database/: db.py  models.py
seed/: grades.py  students.py  subjects.py  teachers.py  teams.py
